--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <a class="nav-link page-scroll" href="#roadmap">RoadMap</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link page-scroll" href="#airdrop">Airdrop</a>
+              <a class="nav-link page-scroll" href="#presale">Presale</a>
             </li>
             <!-- <li class="nav-item">
                 <a class="btn btn-singin" href="#">Download</a>
@@ -187,7 +187,7 @@
               <P>-3% Core Investors</P>
               <p>-3% Team (locked)</p>
               <p>-2% Marketing</p>
-              <p>-2% Airdrop</p>
+              <p>-2% presale</p>
             </div>
 
           </div>
@@ -230,7 +230,7 @@
                 <ul>
                   <p><i class="fas fa-check-circle"></i> DESIGN AND CREATION</p>
                   <p><i class="fas fa-check-circle"></i> COMMUNITY BUILDING</p>
-                  <p><i class="fas fa-check-circle"></i> AIRDROP LAUNCH</p>
+                  <p><i class="fas fa-check-circle"></i> presale LAUNCH</p>
                   <p><i class="far fa-check-circle"></i> GLEN PUBLIC PRESALE</p>
                   <p><i class="far fa-check-circle"></i> PANCAKESWAP LISTING (LIQUIDTY LOCKED FOREVER)</p>
                 </ul>
@@ -244,7 +244,7 @@
               <div class="roadmap-details">
                 <h3>Q3 2021</h3>
                 <ul>
-                  <p><i class="far fa-check-circle"></i> AIRDROP GRADUAL DISTRIBUTION</p>
+                  <p><i class="far fa-check-circle"></i> presale GRADUAL DISTRIBUTION</p>
                   <p><i class="far fa-check-circle"></i> SMART CONTRACT AUDIT</p>
                   <p><i class="far fa-check-circle"></i> LISTING ON COINGECKO AND COINMARKETCAP</p>
                   <p><i class="far fa-check-circle"></i> IMPLEMENTATION OF MARKETING STRATEGIES</p>
@@ -308,18 +308,20 @@
   </section>
   <!-- Our roadmap Plan Section End -->
 
-  <!-- airdrop Section -->
-  <section id="airdrop" class="section">
+  <!-- presale Section -->
+  <section id="presale" class="section">
     <!-- Container Starts -->
     <div class="container">
       <!-- Start Row -->
       <div class="row">
         <div class="col-lg-12">
-          <div class="airdrop-text section-header text-center">
+          <div class="presale-text section-header text-center">
             <div>
-              <h2 class="section-title">AIRDROP</h2>
+              <h2 class="section-title">PUBLIC PRESALE</h2>
               <div class="desc-text">
-                <p>Airdrop Started Join Now</p>
+                <p>Presale Price 1 BNB = 80.000 GLEN</p>
+                <p>Listing Price 1 BNB = 65.000 GLEN</p>
+                <P>Contract Address : <br></b> <b>0xcbbb2aaa42aa2435b699df122687e8945d4cc263</b></P>
               </div>
             </div>
           </div>
@@ -330,18 +332,18 @@
       <!-- Start Row -->
       <div class="row">
         <!-- Start Col -->
-        <div class="airdrop-item">
-          <h3>JOIN GLENCORE AIRDROP</h3>
+        <div class="presale-item">
+          <h3>JOIN GLENCORE PUBLIC PRESALE</h3>
 
-          <a target="_blank" class="btn btn-common airdrop-btn" href="https://t.me/GlencoreAirdrip_Bot">CLICK HERE TO
-            JOIN</a>
+          <a target="_blank" class="btn btn-common presale-btn" href="https://dxsale.app/app/pages/defipresale?saleID=972&chain=BSC">CLICK HERE TO
+            BUY</a>
         </div>
         <!-- End Col -->
       </div>
       <!-- End Row -->
     </div>
   </section>
-  <!-- airdrop Section End -->
+  <!-- presale Section End -->
 
   <!-- Footer Section Start -->
   <footer>
