--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <li class="nav-item">
               <a class="nav-link page-scroll" href="#about">About</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link page-scroll" href="how-to-buy.html">How To Buy</a>
-            </li> -->
+            <li class="nav-item">
+              <a target="_blank" class="nav-link page-scroll" href="./audit.pdf">Audit</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link page-scroll" href="#tokenomics">Tokenomics</a>
             </li>
@@ -326,7 +326,6 @@
             </div>
           </div>
         </div>
-
       </div>
       <!-- End Row -->
       <!-- Start Row -->
@@ -334,7 +333,6 @@
         <!-- Start Col -->
         <div class="presale-item">
           <h3>JOIN GLENCORE PUBLIC PRESALE</h3>
-
           <a target="_blank" class="btn btn-common presale-btn" href="https://dxsale.app/app/pages/defipresale?saleID=972&chain=BSC">CLICK HERE TO
             BUY</a>
         </div>
