--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a class="nav-link page-scroll" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a target="_blank" class="nav-link page-scroll" href="./audit.pdf">Audit</a>
+              <a target="_blank" class="nav-link page-scroll" href="./Glencore_Token_Audit.pdf">Audit</a>
             </li>
             <li class="nav-item">
               <a class="nav-link page-scroll" href="#tokenomics">Tokenomics</a>
