--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <li class="nav-item">
               <a class="nav-link page-scroll" href="#about">About</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a target="_blank" class="nav-link page-scroll" href="./Glencore_Token_Audit.pdf">Audit</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link page-scroll" href="#tokenomics">Tokenomics</a>
             </li>
